<resources>
    <string name="app_name">College Ninja</string>
    <string name="title_activity_landing">College Ninja</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intro_one">IntroOneActivity</string>
    <string name="action_logout">Logout</string>
    <string name="set_preferences_message">Set your preferences now to get exclusive access to the latest new age courses and industry updates. connect with peers and professors, and discover exciting career</string>
    <string name="ok">OK</string>

    <string-array name="array_gender">
        <item>Select Gender</item>
        <item>male</item>
        <item>female</item>
    </string-array>

    <string-array name="array_city">
        <item>Select City</item>
        <item>Bhubaneswar</item>
    </string-array>


    <string-array name="array_Stream">
        <item>Select Stream</item>
    </string-array>

    <string-array name="array_status">
        <item>Select Stream</item>
    </string-array>

    <string name="title_activity_college_gallery">CollegeGallery</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="err_nam">Please enter a valid name</string>
    <string name="err_email">Please enter valid email address</string>
    <string name="err_phone">Please enter a valid phone</string>
    <string name="title_activity_colleges">CollegesActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_latest_news">Latest News</string>
    <string name="menu_my_bookmarks">My Bookmarks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_logout">Logout</string>
    <string name="videos">VIDEOS</string>

    <string name="title_activity_video">VideoActivity</string>
</resources>
