<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/menu_latest_news" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/menu_my_bookmarks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_faq"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />

    </group>
</menu>
